# blastmini

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: benchmark.py
benchmarks/benchmark results/: benchmark_results.csv  benchmark分析（供参考，交作业时删掉）.docx
docs/source/: conf.py  installation.rst
docs/source/api/: blastmini.rst
notebooks/: README.md
results/: blastmini_results.tsv  blastn_results.tsv  comparison_report.txt
src/blastmini/: __init__.py  api.py  cli.py  extension.py  index.py  io.py  models.py  scoring.py  seeding.py  stats.py
src/blastmini.egg-info/: SOURCES.txt  requires.txt
src/blastmini/blastmini.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_api.py  test_cli.py  test_extension.py  test_index.py  test_io.py  test_models.py  test_scoring.py  test_seeding.py  test_stats.py
workflows/: Snakefile
workflows/envs/: environment.yaml
workflows/scripts/: benchmark.py  compare.py  generate_queries.py
